@@ -1,3 +1,9 @@
+2011-06-07  Jakub Jelinek  <jakub@redhat.com>
+
+	PR gcov-profile/49299
+	* gcc.dg/tree-prof/pr49299-1.c: New test.
+	* gcc.dg/tree-prof/pr49299-2.c: New test.
+
 2011-06-06  Jason Merrill  <jason@redhat.com>
 
 	* g++.dg/cpp0x/regress/ptrmem1.C: New.
